src/objects/sfsp__SalesNodeBoundary__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__ContainerSet__c</fullName>
        <label>Container Set (deprecated)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__Filter__c</fullName>
        <label>Filter (deprecated)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__IncludePoints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IncludePoints (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesBoundary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Boundary</label>
        <referenceTo>sfsp__SalesBoundary__c</referenceTo>
        <relationshipLabel>Sales Boundaries</relationshipLabel>
        <relationshipName>SalesBoundaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Node</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales Node Boundaries</relationshipLabel>
        <relationshipName>SalesNodeBoundaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan (deprecated)</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Sales Node Boundaries</relationshipLabel>
        <relationshipName>SalesNodeBoundaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Node Boundary</label>
    <nameField>
        <label>Sales Node Boundary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node Boundaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>